--- a/makePastPredictions.ipynb
+++ b/makePastPredictions.ipynb
@@ -36,15 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# getTrainingSetCSV(2019, 12, 30, 2020, 1, 1, '2019-20', '10/16/2019')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Creates a csv file that gives predictions for range of games\n",
     "# Prints accuracy of model in predicting games for specified range\n",
     "# gameDataFilename and outputFilename must be '.csv' files\n",
@@ -85,7 +76,7 @@
     "            columns=['Date', 'Home', 'Away', 'Home Team Win Probability']\n",
     "        )\n",
     "\n",
-    "        setCurrentWorkingDirectory('Data')\n",
+    "#         setCurrentWorkingDirectory('Data')\n",
     "        predictionsDF.to_csv(outputFilename)  # Saves game info with predictions in data folder as csv file\n",
     "\n",
     "        value = withoutNums.iloc[i,9]\n",
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +104,63 @@
     "    # Obtains info for range of games\n",
     "    getTrainingSetCSV(startYear, startMonth, startDay, endYear, endMonth, endDay, season, startDateOfSeason,\n",
     "                          gameDataFilename)\n",
-    "    # Makes probabilities for range of games\n",
-    "    getPredictionsCSV(gameDataFilename, outputFilename)"
+    "#     # Makes probabilities for range of games\n",
+    "#     getPredictionsCSV(gameDataFilename, outputFilename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12/29/2019\n"
+      "08/08/2020\n",
+      "['Miami Heat', 'Phoenix Suns', 1.1802345914620955, 1.0322167307471481, -0.3001059871744429, 0.20232021981643478, 0.8167438320029146, 0.6671322849598795, -0.5158360513340187, 1.0954185561539456, 0]\n",
+      "['Dallas Mavericks', 'Milwaukee Bucks', -1.3811255857535165, -1.0838275672845064, -0.12004239486977666, -1.5174016486232527, -0.9800925984034974, 1.2972016651997675, 2.7081392695035853, -0.2738546390384864, 1]\n",
+      "['Portland Trail Blazers', 'LA Clippers', -1.3748477421819094, -0.8773842211350773, -1.6205723307419904, -1.5174016486232529, -1.5722318766056105, -0.18531452359996692, 2.2890224777946937, -0.5477092780769728, 0]\n",
+      "['Denver Nuggets', 'Utah Jazz', 0.18205746357660002, -0.20644334614943255, 2.8209962794397616, -1.2139213188986016, -0.02041859580007288, 0.29650323775995113, 0.25791802566700706, -1.3008095354328102, 1]\n",
+      "['Indiana Pacers', 'Los Angeles Lakers', -0.8851759435965718, -1.3418817499712934, 0.5401907769139961, -2.023202198164337, -0.8575810236030603, -0.5188806660799039, 0.8382335834177785, -0.4792456183173512, 1]\n",
+      "08/09/2020\n",
+      "['Boston Celtics', 'Orlando Magic', 1.3284672706183467, 0.3628882450747679, -1.0249543747901384, 0.7045333157189532, 1.5004579765280763, 1.8838003552234293, -0.7810022447955636, 1.8498597848747842, 1]\n",
+      "['Portland Trail Blazers', 'Philadelphia 76ers', -0.9995134702747559, -0.4147294229425887, -3.255737425803969, -1.4090666314379066, -0.7399518788357635, 0.960368808545274, 1.9850473721887218, 0.41107995219439813, 1]\n",
+      "['Sacramento Kings', 'Houston Rockets', -1.3411193398623311, -0.10368235573564899, 1.6278687129019846, 0.4025904661251169, -1.1921446936798414, -1.47749047468504, 0.488126402997226, -1.0962132058517284, 0]\n",
+      "['Oklahoma City Thunder', 'Washington Wizards', 1.7080293479378745, 1.347870624563415, -1.5072858452796158, 0.0, 1.356578444532233, 0.0, -2.212839693587428, 0.6851332536573302, 1]\n",
+      "['Toronto Raptors', 'Memphis Grizzlies', 1.5815086554980318, -0.20736471147129437, -0.6632057719230298, -0.3019428495938363, 1.4387953199584291, 0.664870713608267, -1.6596297701905665, 0.8221599043887887, 1]\n",
+      "['New Orleans Pelicans', 'San Antonio Spurs', -0.037956207731952796, 0.5702529565460622, 0.8440800733565861, 3.5226665785947695, 0.08221687542619593, -0.480184404272637, -0.45558464279741284, -0.27405330146293205, 0]\n",
+      "['LA Clippers', 'Brooklyn Nets', 1.2841850282644023, -0.10368235573564899, -0.36174860286710864, -0.6038856991876762, 1.5004579765280763, 1.8468630933563, -0.6833769641961192, 1.781346459509051, 0]\n",
+      "[['Miami Heat', 'Phoenix Suns', 1.1802345914620955, 1.0322167307471481, -0.3001059871744429, 0.20232021981643478, 0.8167438320029146, 0.6671322849598795, -0.5158360513340187, 1.0954185561539456, 0, '08/08/2020'], ['Dallas Mavericks', 'Milwaukee Bucks', -1.3811255857535165, -1.0838275672845064, -0.12004239486977666, -1.5174016486232527, -0.9800925984034974, 1.2972016651997675, 2.7081392695035853, -0.2738546390384864, 1, '08/08/2020'], ['Portland Trail Blazers', 'LA Clippers', -1.3748477421819094, -0.8773842211350773, -1.6205723307419904, -1.5174016486232529, -1.5722318766056105, -0.18531452359996692, 2.2890224777946937, -0.5477092780769728, 0, '08/08/2020'], ['Denver Nuggets', 'Utah Jazz', 0.18205746357660002, -0.20644334614943255, 2.8209962794397616, -1.2139213188986016, -0.02041859580007288, 0.29650323775995113, 0.25791802566700706, -1.3008095354328102, 1, '08/08/2020'], ['Indiana Pacers', 'Los Angeles Lakers', -0.8851759435965718, -1.3418817499712934, 0.5401907769139961, -2.023202198164337, -0.8575810236030603, -0.5188806660799039, 0.8382335834177785, -0.4792456183173512, 1, '08/08/2020'], ['Boston Celtics', 'Orlando Magic', 1.3284672706183467, 0.3628882450747679, -1.0249543747901384, 0.7045333157189532, 1.5004579765280763, 1.8838003552234293, -0.7810022447955636, 1.8498597848747842, 1, '08/09/2020'], ['Portland Trail Blazers', 'Philadelphia 76ers', -0.9995134702747559, -0.4147294229425887, -3.255737425803969, -1.4090666314379066, -0.7399518788357635, 0.960368808545274, 1.9850473721887218, 0.41107995219439813, 1, '08/09/2020'], ['Sacramento Kings', 'Houston Rockets', -1.3411193398623311, -0.10368235573564899, 1.6278687129019846, 0.4025904661251169, -1.1921446936798414, -1.47749047468504, 0.488126402997226, -1.0962132058517284, 0, '08/09/2020'], ['Oklahoma City Thunder', 'Washington Wizards', 1.7080293479378745, 1.347870624563415, -1.5072858452796158, 0.0, 1.356578444532233, 0.0, -2.212839693587428, 0.6851332536573302, 1, '08/09/2020'], ['Toronto Raptors', 'Memphis Grizzlies', 1.5815086554980318, -0.20736471147129437, -0.6632057719230298, -0.3019428495938363, 1.4387953199584291, 0.664870713608267, -1.6596297701905665, 0.8221599043887887, 1, '08/09/2020'], ['New Orleans Pelicans', 'San Antonio Spurs', -0.037956207731952796, 0.5702529565460622, 0.8440800733565861, 3.5226665785947695, 0.08221687542619593, -0.480184404272637, -0.45558464279741284, -0.27405330146293205, 0, '08/09/2020'], ['LA Clippers', 'Brooklyn Nets', 1.2841850282644023, -0.10368235573564899, -0.36174860286710864, -0.6038856991876762, 1.5004579765280763, 1.8468630933563, -0.6833769641961192, 1.781346459509051, 0, '08/09/2020']]\n",
+      "                      Home                Away     W_PCT       REB       AST  \\\n",
+      "0               Miami Heat        Phoenix Suns  1.180235  1.032217 -0.300106   \n",
+      "1         Dallas Mavericks     Milwaukee Bucks -1.381126 -1.083828 -0.120042   \n",
+      "2   Portland Trail Blazers         LA Clippers -1.374848 -0.877384 -1.620572   \n",
+      "3           Denver Nuggets           Utah Jazz  0.182057 -0.206443  2.820996   \n",
+      "4           Indiana Pacers  Los Angeles Lakers -0.885176 -1.341882  0.540191   \n",
+      "5           Boston Celtics       Orlando Magic  1.328467  0.362888 -1.024954   \n",
+      "6   Portland Trail Blazers  Philadelphia 76ers -0.999513 -0.414729 -3.255737   \n",
+      "7         Sacramento Kings     Houston Rockets -1.341119 -0.103682  1.627869   \n",
+      "8    Oklahoma City Thunder  Washington Wizards  1.708029  1.347871 -1.507286   \n",
+      "9          Toronto Raptors   Memphis Grizzlies  1.581509 -0.207365 -0.663206   \n",
+      "10    New Orleans Pelicans   San Antonio Spurs -0.037956  0.570253  0.844080   \n",
+      "11             LA Clippers       Brooklyn Nets  1.284185 -0.103682 -0.361749   \n",
+      "\n",
+      "         TOV  PLUS_MINUS  OFF_RATING  DEF_RATING    TS_PCT  Result        Date  \n",
+      "0   0.202320    0.816744    0.667132   -0.515836  1.095419       0  08/08/2020  \n",
+      "1  -1.517402   -0.980093    1.297202    2.708139 -0.273855       1  08/08/2020  \n",
+      "2  -1.517402   -1.572232   -0.185315    2.289022 -0.547709       0  08/08/2020  \n",
+      "3  -1.213921   -0.020419    0.296503    0.257918 -1.300810       1  08/08/2020  \n",
+      "4  -2.023202   -0.857581   -0.518881    0.838234 -0.479246       1  08/08/2020  \n",
+      "5   0.704533    1.500458    1.883800   -0.781002  1.849860       1  08/09/2020  \n",
+      "6  -1.409067   -0.739952    0.960369    1.985047  0.411080       1  08/09/2020  \n",
+      "7   0.402590   -1.192145   -1.477490    0.488126 -1.096213       0  08/09/2020  \n",
+      "8   0.000000    1.356578    0.000000   -2.212840  0.685133       1  08/09/2020  \n",
+      "9  -0.301943    1.438795    0.664871   -1.659630  0.822160       1  08/09/2020  \n",
+      "10  3.522667    0.082217   -0.480184   -0.455585 -0.274053       0  08/09/2020  \n",
+      "11 -0.603886    1.500458    1.846863   -0.683377  1.781346       0  08/09/2020  \n"
      ]
     }
    ],
@@ -135,7 +169,7 @@
     "# # season(yyyy-yy), start date of season (mm/dd/yyyy), .csv filename for games with z score differences,\n",
     "# # .csv filename for games with predictions\n",
     "# # EDIT THIS\n",
-    "makePastPredictions(2019, 12, 29, 2020, 1, 1, '2019-20', '10/16/2019',\n",
+    "makePastPredictions(2020, 8, 8, 2020, 8, 10, '2019-20', '10/16/2019',\n",
     "                    'gamesWithInfo.csv', 'predictions.csv')"
    ]
   },
@@ -144,7 +178,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "csv = pd.read_csv(\"gamesWithInfo.csv\")\n",
+    "start_date = csv[\"Date\"][len(csv)-1].split('/')\n",
+    "print(start_date)\n",
+    "month = int(start_date[0])\n",
+    "day = int(start_date[1])\n",
+    "print(month)\n",
+    "print(day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def updateCSV(filename):\n",
+    "    old_df = pd.read_csv(filename)\n",
+    "    \n",
+    "    start_date = old_df[\"Date\"][len(old_df)-1].split('/')\n",
+    "    month = int(start_date[0])\n",
+    "    day = int(start_date[1])\n",
+    "    year = int(start_date[2])\n",
+    "    \n",
+    "    new_df = createDataFrame(getTrainingSet(year, month, day,2020, 8, 11,'2019-20', '10/16/2019'))\n",
+    "    uptodate = old_df.append(new_df)\n",
+    "    \n",
+    "    uptodate.to_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "08/09/2020\n",
+      "['Boston Celtics', 'Orlando Magic', 1.3284672706183467, 0.3628882450747679, -1.0249543747901384, 0.7045333157189532, 1.5004579765280763, 1.8838003552234293, -0.7810022447955636, 1.8498597848747842, 1]\n",
+      "['Portland Trail Blazers', 'Philadelphia 76ers', -0.9995134702747559, -0.4147294229425887, -3.255737425803969, -1.4090666314379066, -0.7399518788357635, 0.960368808545274, 1.9850473721887218, 0.41107995219439813, 1]\n",
+      "['Sacramento Kings', 'Houston Rockets', -1.3411193398623311, -0.10368235573564899, 1.6278687129019846, 0.4025904661251169, -1.1921446936798414, -1.47749047468504, 0.488126402997226, -1.0962132058517284, 0]\n",
+      "['Oklahoma City Thunder', 'Washington Wizards', 1.7080293479378745, 1.347870624563415, -1.5072858452796158, 0.0, 1.356578444532233, 0.0, -2.212839693587428, 0.6851332536573302, 1]\n",
+      "['Toronto Raptors', 'Memphis Grizzlies', 1.5815086554980318, -0.20736471147129437, -0.6632057719230298, -0.3019428495938363, 1.4387953199584291, 0.664870713608267, -1.6596297701905665, 0.8221599043887887, 1]\n",
+      "['New Orleans Pelicans', 'San Antonio Spurs', -0.037956207731952796, 0.5702529565460622, 0.8440800733565861, 3.5226665785947695, 0.08221687542619593, -0.480184404272637, -0.45558464279741284, -0.27405330146293205, 0]\n",
+      "['LA Clippers', 'Brooklyn Nets', 1.2841850282644023, -0.10368235573564899, -0.36174860286710864, -0.6038856991876762, 1.5004579765280763, 1.8468630933563, -0.6833769641961192, 1.781346459509051, 0]\n",
+      "08/10/2020\n",
+      "['Phoenix Suns', 'Oklahoma City Thunder', -1.136327775285095, -0.20896656760325916, 2.844485570839124, 1.0040474290893582, -0.6574625656599052, -0.036668010716727345, 0.9105527103652282, -0.20505154957805904, 1]\n",
+      "['Utah Jazz', 'Dallas Mavericks', 0.19570089463243312, -0.8358662704130363, -1.210419391846436, 2.7109280585412683, -0.5752797449524172, -1.5400564501024174, -0.5203158344944121, 0.41010309915611787, 0]\n",
+      "['Milwaukee Bucks', 'Toronto Raptors', 0.38508885717994934, 2.350873885536673, -0.24208387836928852, -0.40161897163574367, 0.8012825018980096, 0.6233561821843125, -0.7154342724298202, 0.6151546487341769, 0]\n",
+      "['Miami Heat', 'Indiana Pacers', 0.0, 0.8358662704130401, 0.12104193918464512, 1.8072853723608455, 0.18491134659184827, 0.8433642464846556, 0.5203158344944121, 1.5037113635724324, 1]\n",
+      "['Los Angeles Lakers', 'Denver Nuggets', 0.5176604309632098, 0.20896656760326277, -1.210419391846436, 1.1044521719982936, 0.6985539760136492, -0.3666801071672421, -1.3658290655478376, 0.4101030991561179, 1]\n",
+      "[['Boston Celtics', 'Orlando Magic', 1.3284672706183467, 0.3628882450747679, -1.0249543747901384, 0.7045333157189532, 1.5004579765280763, 1.8838003552234293, -0.7810022447955636, 1.8498597848747842, 1, '08/09/2020'], ['Portland Trail Blazers', 'Philadelphia 76ers', -0.9995134702747559, -0.4147294229425887, -3.255737425803969, -1.4090666314379066, -0.7399518788357635, 0.960368808545274, 1.9850473721887218, 0.41107995219439813, 1, '08/09/2020'], ['Sacramento Kings', 'Houston Rockets', -1.3411193398623311, -0.10368235573564899, 1.6278687129019846, 0.4025904661251169, -1.1921446936798414, -1.47749047468504, 0.488126402997226, -1.0962132058517284, 0, '08/09/2020'], ['Oklahoma City Thunder', 'Washington Wizards', 1.7080293479378745, 1.347870624563415, -1.5072858452796158, 0.0, 1.356578444532233, 0.0, -2.212839693587428, 0.6851332536573302, 1, '08/09/2020'], ['Toronto Raptors', 'Memphis Grizzlies', 1.5815086554980318, -0.20736471147129437, -0.6632057719230298, -0.3019428495938363, 1.4387953199584291, 0.664870713608267, -1.6596297701905665, 0.8221599043887887, 1, '08/09/2020'], ['New Orleans Pelicans', 'San Antonio Spurs', -0.037956207731952796, 0.5702529565460622, 0.8440800733565861, 3.5226665785947695, 0.08221687542619593, -0.480184404272637, -0.45558464279741284, -0.27405330146293205, 0, '08/09/2020'], ['LA Clippers', 'Brooklyn Nets', 1.2841850282644023, -0.10368235573564899, -0.36174860286710864, -0.6038856991876762, 1.5004579765280763, 1.8468630933563, -0.6833769641961192, 1.781346459509051, 0, '08/09/2020'], ['Phoenix Suns', 'Oklahoma City Thunder', -1.136327775285095, -0.20896656760325916, 2.844485570839124, 1.0040474290893582, -0.6574625656599052, -0.036668010716727345, 0.9105527103652282, -0.20505154957805904, 1, '08/10/2020'], ['Utah Jazz', 'Dallas Mavericks', 0.19570089463243312, -0.8358662704130363, -1.210419391846436, 2.7109280585412683, -0.5752797449524172, -1.5400564501024174, -0.5203158344944121, 0.41010309915611787, 0, '08/10/2020'], ['Milwaukee Bucks', 'Toronto Raptors', 0.38508885717994934, 2.350873885536673, -0.24208387836928852, -0.40161897163574367, 0.8012825018980096, 0.6233561821843125, -0.7154342724298202, 0.6151546487341769, 0, '08/10/2020'], ['Miami Heat', 'Indiana Pacers', 0.0, 0.8358662704130401, 0.12104193918464512, 1.8072853723608455, 0.18491134659184827, 0.8433642464846556, 0.5203158344944121, 1.5037113635724324, 1, '08/10/2020'], ['Los Angeles Lakers', 'Denver Nuggets', 0.5176604309632098, 0.20896656760326277, -1.210419391846436, 1.1044521719982936, 0.6985539760136492, -0.3666801071672421, -1.3658290655478376, 0.4101030991561179, 1, '08/10/2020']]\n",
+      "                      Home                   Away     W_PCT       REB  \\\n",
+      "0           Boston Celtics          Orlando Magic  1.328467  0.362888   \n",
+      "1   Portland Trail Blazers     Philadelphia 76ers -0.999513 -0.414729   \n",
+      "2         Sacramento Kings        Houston Rockets -1.341119 -0.103682   \n",
+      "3    Oklahoma City Thunder     Washington Wizards  1.708029  1.347871   \n",
+      "4          Toronto Raptors      Memphis Grizzlies  1.581509 -0.207365   \n",
+      "5     New Orleans Pelicans      San Antonio Spurs -0.037956  0.570253   \n",
+      "6              LA Clippers          Brooklyn Nets  1.284185 -0.103682   \n",
+      "7             Phoenix Suns  Oklahoma City Thunder -1.136328 -0.208967   \n",
+      "8                Utah Jazz       Dallas Mavericks  0.195701 -0.835866   \n",
+      "9          Milwaukee Bucks        Toronto Raptors  0.385089  2.350874   \n",
+      "10              Miami Heat         Indiana Pacers  0.000000  0.835866   \n",
+      "11      Los Angeles Lakers         Denver Nuggets  0.517660  0.208967   \n",
+      "\n",
+      "         AST       TOV  PLUS_MINUS  OFF_RATING  DEF_RATING    TS_PCT  Result  \\\n",
+      "0  -1.024954  0.704533    1.500458    1.883800   -0.781002  1.849860       1   \n",
+      "1  -3.255737 -1.409067   -0.739952    0.960369    1.985047  0.411080       1   \n",
+      "2   1.627869  0.402590   -1.192145   -1.477490    0.488126 -1.096213       0   \n",
+      "3  -1.507286  0.000000    1.356578    0.000000   -2.212840  0.685133       1   \n",
+      "4  -0.663206 -0.301943    1.438795    0.664871   -1.659630  0.822160       1   \n",
+      "5   0.844080  3.522667    0.082217   -0.480184   -0.455585 -0.274053       0   \n",
+      "6  -0.361749 -0.603886    1.500458    1.846863   -0.683377  1.781346       0   \n",
+      "7   2.844486  1.004047   -0.657463   -0.036668    0.910553 -0.205052       1   \n",
+      "8  -1.210419  2.710928   -0.575280   -1.540056   -0.520316  0.410103       0   \n",
+      "9  -0.242084 -0.401619    0.801283    0.623356   -0.715434  0.615155       0   \n",
+      "10  0.121042  1.807285    0.184911    0.843364    0.520316  1.503711       1   \n",
+      "11 -1.210419  1.104452    0.698554   -0.366680   -1.365829  0.410103       1   \n",
+      "\n",
+      "          Date  \n",
+      "0   08/09/2020  \n",
+      "1   08/09/2020  \n",
+      "2   08/09/2020  \n",
+      "3   08/09/2020  \n",
+      "4   08/09/2020  \n",
+      "5   08/09/2020  \n",
+      "6   08/09/2020  \n",
+      "7   08/10/2020  \n",
+      "8   08/10/2020  \n",
+      "9   08/10/2020  \n",
+      "10  08/10/2020  \n",
+      "11  08/10/2020  \n"
+     ]
+    }
+   ],
+   "source": [
+    "updateCSV(\"gamesWithInfo.csv\")"
+   ]
   },
   {
    "cell_type": "code",
