--- a/makePastPredictions.ipynb
+++ b/makePastPredictions.ipynb
@@ -261,7 +261,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "day_to_day('gamesWithInfo.csv')"
+    "def error_handle(count):\n",
+    "    try:\n",
+    "        print(\"-----try is running-----\")\n",
+    "        day_to_day('gamesWithInfo.csv')\n",
+    "        count = 0\n",
+    "\n",
+    "    except:\n",
+    "        if count < 10:\n",
+    "            print(\"------exception handled------\", count)\n",
+    "            error_handle(count + 1)\n",
+    "        else:\n",
+    "            print(\"------max tries exceeded------\")\n",
+    "            \n",
+    "            "
    ]
   },
   {
@@ -269,7 +282,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "error_handle(0)"
+   ]
   },
   {
    "cell_type": "code",
